--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register src/**/test.ts",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "start-dev": "ts-node index.ts",
     "start": "node dist/index.js",
     "build": "tsc"
