--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "path-type": "^5.0.0"
   }
 }
