--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abc_macros_code",
+  "name": "abc-editing-macros",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
