--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/expect": "^24.3.0",
     "@types/mocha": "^9.1.0",
     "chai": "^4.3.6",
+    "prettier": "2.6.2",
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
